# invariants_py

./: .gitignore  .gitlab-ci.yml  CITATION.bib  Create_plots.py  LICENSE  README.md  jit_tmpe2mydn.c  pyproject.toml  run_all_examples.py  run_all_examples.sh  run_all_examples_and_tests.py  run_all_scripts.py
.github/workflows/: install_and_test.yml  publish-to-pypi.yml
GJK/: compute_distance.py  geometry.py
benchmarking/: FS_extended_bench.py  FS_rot_bench.py  VI_bench_calc_pos.py  VI_bench_gen_pos.py  VI_test_script_pos.py  benchmark_different_OCP_formulations_calculation_pos.py  benchmark_different_OCP_formulations_calculation_rot.py  benchmark_different_OCP_formulations_generation_pos.py  benchmark_different_OCP_formulations_generation_rot.py  list_of_different_formulations_calculation_pos.py  list_of_different_formulations_calculation_rot.py  list_of_different_formulations_generation_pos.py  test_script_extended_FS.py  test_script_pos.py  test_script_rot.py
data/: beer_1.txt  scooping_motion.csv  sinus.txt
docs/: history.md  python_installation.md
examples/: README.md  calculate_invariants_pose.py  calculate_invariants_position.py  calculate_invariants_position_longtrial.py  calculate_invariants_position_trajectory.py  calculate_screw_invariants_pose.py  generate_position_trajectory.py  generate_position_trajectory_from_invariants.py  generate_trajectory_position.py  interpolate_rotation.py  invariants_calculation.py  online_calculation.py  online_generation.py  trajectory_generation_fullpose.py  trajectory_generation_position.py  tutorial_eFSI.py
examples/fatrop-tests/: collision_detection.py  collision_detection_bottle.py  pouring_motion_example_rockit.py  test_optistack.py  test_rockit_fatrop.py  trajectory_generation_fullpose_coupled_rockit.py  trajectory_generation_fullpose_rockit.py  trajectory_generation_position_rockit.py  trajectory_generation_rotation_rockit.py  tutorial.py
examples/invariants_bench/: VI_bench_calc_pos.py  VI_test_script_pos.py  benchmark_different_OCP_formulations_calculation_pos.py  benchmark_different_OCP_formulations_calculation_rot.py  benchmark_different_OCP_formulations_generation_pos.py  benchmark_different_OCP_formulations_generation_rot.py  list_of_different_formulations_calculation_pos.py  list_of_different_formulations_calculation_rot.py  list_of_different_formulations_generation_pos.py  list_of_different_formulations_generation_rot.py  test_script_pos.py  test_script_rot.py
examples/invariants_calculation/: benchmark_different_OCP_formulations_calculation.py  benchmark_different_OCP_formulations_generation.py  list_of_different_formulations_calculation.py  list_of_different_formulations_generation.py  offline_calculation.py  online_calculation.py  test_script.py
examples/other_OCP_formulations/: invariants_calculation_reformulated.py
examples/trajectory_generation/: COMPARING trajectory_generation_fullpose.py  COMPARING trajectory_generation_position.py  COMPARING trajectory_generation_rotation.py  online_generation.py  trajectory_generation_fullpose.py  trajectory_generation_fullpose_COMPARE_wkinmodel.py  trajectory_generation_position.py  trajectory_generation_rotation.py
fatrop-tests/: test_optistack.py  test_rockit_fatrop.py  trajectory_generation_fullpose_rockit.py  trajectory_generation_position_rockit.py  trajectory_generation_rotation_rockit.py
invariants_py/: FS_extended_bench.py  FS_pos_bench.py  FS_rot_bench.py  FSr_init.py  SE3.py  SO3.py  VI_analytical_formulas.py  VI_settings.py  VI_solver_pos.py  VI_superclass.py  VI_superclass_pos.py  __init__.py  calculate_invariant_trajectory.py  calculate_invariants.py  check_solver.py  class_frenetserret_advanced.py  class_frenetserret_calculation.py  class_frenetserret_calculation_advanced.py  class_frenetserret_calculation_minimumjerk.py  class_frenetserret_calculation_reformulation_position.py  class_frenetserret_calculation_reformulation_rotation.py  class_frenetserret_generation_position.py  class_frenetserret_generation_rotation.py  data_handler.py  discretized_vector_invariants.py  dynamics.py  dynamics_invariants.py  dynamics_screw_invariants.py  dynamics_vector_invariants.py  fw_kinem_example.py  generate_trajectory.py  initialization.py  integrator_functions.py  integrator_functions_bench.py  inv_kin.py  invariant_descriptor_class.py  invariants_handler.py  ocp_helper.py  ocp_initialization.py  opti_calculate_screw_invariants_pose.py  (+28 more)
invariants_py/calculate_invariants/: README.md  opti_calculate_screw_invariants_pose.py  opti_calculate_screw_invariants_pose_fatrop.py  opti_calculate_vector_invariants_position.py  opti_calculate_vector_invariants_position_mf-fatrop.py  (+11 more)
invariants_python/: SO3.py  class_frenetserret_calculation.py  class_frenetserret_calculation_minimumjerk.py  class_frenetserret_calculation_reformulation_position.py  class_frenetserret_calculation_reformulation_rotation.py  class_frenetserret_generation_position.py  class_frenetserret_generation_rotation.py  integrator_functions.py  invariant_descriptor_class.py  plotters.py  read_and_write_data.py  reparameterization.py  rockit_class_frenetserret_calculation_reformulation_position.py  rockit_class_frenetserret_calculation_reformulation_rotation.py  rockit_class_frenetserret_generation_position.py  rockit_class_frenetserret_generation_rotation.py  rockit_frenetserret_calculation_minimumjerk.py
notebooks/: online_calculation_invariants.ipynb  online_estimation_invariants_contour.ipynb  online_trajectory_generation.ipynb
tests/: compare_optimization_formulations.py  rotation_constraint.py  test_compare_ipopt_fatrop_position.py  test_dynamics_vector_invariants.py  test_initialization.py  test_orientation_kinematics.py
(+104 files in other folders)
