[tool.poetry]
name = "invariants-py"
version = "0.3.5"
description = "Coordinate-invariant trajectory representations for trajectory analysis and trajectory generation"
authors = ["Maxim Vochten", "Riccardo Burlizzi", "Arno Verduyn"]
packages = [{include = "invariants_py"}]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
scipy = "^1.5.2"
casadi = "^3.5.5, <4.0.0"
PyQt5 = "^5.10.1"
matplotlib = "^3.3.1, <3.8.0" # open bug in >=3.8.0 https://github.com/matplotlib/matplotlib/issues/26827
numpy = "^1.19.0"
ipython = "^7.15.0"
numpy-stl = "^2.12.0"
pandas = "^1.1.0"
urdf2casadi = "^1.0.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"