[project]
name = "invariants-py"
version = "0.3.6" # note that it is possible for the build backend to manage versions in a dynamic way
description = "Calculate invariant trajectory representations from trajectory data and generate new trajectories from invariant representations"
authors = [
    {name = "Maxim Vochten", email = "maxim.vochten@kuleuven.be"}, 
    {name = "Riccardo Burlizzi"},
    {name = "Arno Verduyn"}
]
#packages = [{include = "invariants_py"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
keywords = ["trajectory analysis", "trajectory generation", "invariant", "coordinate-invariant", "trajectory representation", "trajectory optimization", "trajectory planning", "robotics", "dynamics", "kinematics", "screw theory", "optimal control", "geometric optimal control", "differential geometry", "optimization", "casadi", "python"]
dependencies = [ # it is possible to have optional dependencies
    "scipy",
    "casadi",
    "PyQt5",
    "matplotlib",
    "numpy",
    "ipython",
    "numpy-stl",
    "pandas",
    "urdf2casadi",
    "jupyter"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Natural Language :: English"
]

[project.urls]
Documentation = "https://trajectory-invariants.github.io/"
Repository = "https://github.com/trajectory-invariants/invariants_py"
Issues = "https://github.com/trajectory-invariants/invariants_py/issues"

# [tool.poetry.dependencies]
# python = "^3.6"
# scipy = "^1.5.2"
# casadi = "^3.5.5, <4.0.0"
# PyQt5 = "^5.10.1"
# matplotlib = "^3.3.1, <3.8.0" # open bug in >=3.8.0 https://github.com/matplotlib/matplotlib/issues/26827
# numpy = "^1.19.0"
# ipython = "^7.15.0"
# numpy-stl = "^2.12.0"
# pandas = "^1.1.0"
# urdf2casadi = "^1.0.0"
# jupyter = "^1.0.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"