[project]
name = "invariants-py"
version = "0.3.7" # note that it is possible for the build backend to manage versions in a dynamic way
description = "Calculate invariant trajectory representations from trajectory data and generate new trajectories from invariant representations"
authors = [ {name = "Maxim Vochten"}, 
    {name = "Riccardo Burlizzi"},
    {name = "Arno Verduyn"}
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["trajectory analysis", "trajectory generation", "invariant", "coordinate-invariant", "trajectory representation", "trajectory optimization", "trajectory planning", "robotics", "dynamics", "kinematics", "screw theory", "optimal control", "geometric optimal control", "differential geometry", "optimization", "casadi", "python"]
dependencies = [ # it is possible to have optional dependencies
    "scipy",
    "casadi",
    "PyQt5",
    "matplotlib",
    "numpy",
    "ipython",
    "numpy-stl",
    "pandas",
    "urdf2casadi",
    "jupyter"
]
classifiers = [ # only relevant/used for PyPI
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
    "Operating System :: OS Independent",
    "Natural Language :: English"
]

[project.license]
text = "MIT License"
files = ["LICENSE"]

[project.urls]
Home-page = "https://trajectory-invariants.github.io/"
Documentation = "https://trajectory-invariants.github.io/docs/python/"
Repository = "https://github.com/trajectory-invariants/invariants_py"
Issues = "https://github.com/trajectory-invariants/invariants_py/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"